# sac-energy

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: main.yml
ci/: fail-on-warning.sh
src/: CMakeLists.txt  ControlFlow.sac  Freq.sac  Ina.sac  Perf.sac  Rapl.sac  Stall.sac  Stalls.sac  Temp.sac  example.sac  test.sac
src/src/: control_flow.c  freq.c  ina.c  perf.c  rapl.c  rapl.h  stall.c  temp.c
